# WebAssembly-C-Cpp-Reference

./: .gitattributes  .gitignore  .gitmodules  .shaderverifier.glsl.swp  .swk  .swl  .swm  .swn  .swo  .swp  CMakeLists.txt  LICENSE  README.md  notes.txt  project.cmake.in  todo
cmake/: README.md.in  buildinfo.h.in  emscripten_index_template.html.in  executable_project_template.cmake.in  gdk_project.cmake  jfclib.cmake  library_project_template.cmake.in
docs/: CMakeLists.txt  doxy.config.in
lib/: CMakeLists.txt  Game.cpp
lib/Debug/: CMakeLists.txt
lib/Debug/include/gdk/: exception.h  logger.h
lib/Debug/src/: exception.cpp  logger.cpp
lib/EntityComponentSystem/: CMakeLists.txt
lib/EntityComponentSystem/include/gdk/: component.h  componentannotations.h  entity.h  gameobject.h  object.h  scene.h  scenegraph.h  scenemanager.h
lib/EntityComponentSystem/src/: component.cpp  entity.cpp  gameobject.cpp  object.cpp  scene.cpp  scenegraph.cpp  scenemanager.cpp
lib/GLFWWrapper/: CMakeLists.txt
lib/GLFWWrapper/include/gdk/: glfw_wrapper.h  simpleglfwwindow.h
lib/GLFWWrapper/src/: glfw_wrapper.cpp  simpleglfwwindow.cpp
lib/Graphics/: CMakeLists.txt
lib/Graphics/include/gdk/: camera.h  color.h  floatuniformcollection.h  mat4x4uniformcollection.h  model.h  opengl.h  shaderprogram.h  texture.h  textureuniformcollection.h  uniformcollection.h  vector2uniformcollection.h  vector3uniformcollection.h  vector4uniformcollection.h  vertexattribute.h  vertexdata.h  vertexformat.h
lib/Graphics/src/: camera.cpp  color.cpp  floatuniformcollection.cpp  glh.cpp  mat4x4uniformcollection.cpp  model.cpp  opengl.cpp  shaderprogram.cpp  texture.cpp  textureuniformcollection.cpp  vector2uniformcollection.cpp  vector3uniformcollection.cpp  vector4uniformcollection.cpp  vertexattribute.cpp  vertexdata.cpp  vertexformat.cpp
lib/Graphics/src/include/gdk/: nlohmann_json_util.h
lib/Input/: CMakeLists.txt  README.md
lib/Input/include/gdk/: gamepads.h  gamepads_private.h  input_private.h  input_protected.h  keyboard.h  mouse.h
lib/Input/src/: gamepads.cpp  input_protected.cpp  keyboard.cpp  mouse.cpp
lib/Input/src/include/gdk/: input_private.h
lib/Math/: CMakeLists.txt
lib/Math/include/gdk/: intvector2.h  mat4x4.h  quaternion.h  trigonometry.h  vector2.h  vector3.h  vector4.h
lib/Math/src/: intvector2.cpp  mat4x4.cpp  quaternion.cpp  trigonometry.cpp  vector2.cpp  vector3.cpp  vector4.cpp
lib/Math/test/: example_test.cpp
lib/Memory/: CMakeLists.txt
lib/Memory/include/gdk/: auth_map.h  auth_vector.h  default_ptr.h  dynamic_pool.h  final_action.h  lazy_ptr.h  locking_queue.h  resource_manager.h  static_pool.h
lib/Memory/test/: example_test.cpp
lib/Resources/: CMakeLists.txt
lib/Resources/include/gdk/: database.h  resources.h  resources_private.h  resources_protected.h
lib/Resources/src/: database.cpp  httprequest.cpp  resources.cpp  resources_private.cpp  resources_protected.cpp
lib/Resources/src/include/gdk/: httprequest.h  resources_private.h
lib/Resources/test/: example_test.cpp  resources_test.cpp
lib/Time/: CMakeLists.txt
lib/Time/include/gdk/: gameloop.h  time.h  time_private.h  time_protected.h  timer.h
lib/Time/src/: gameloop.cpp  time.cpp  time_private.cpp  time_protected.cpp  timer.cpp
lib/Time/src/include/gdk/: time_private.h
lib/include/: gdk.h
lib/include/gdk/: color.h  default_ptr.h  game.h  graphics.h  intvector2.h  keyboard.h  lazy_ptr.h  logger.h  static_pool.h  vector2.h  vector4.h
lib/src/: .swp  camera.cpp  color.cpp  defaultresources.cpp  exception.cpp  floatuniformcollection.cpp  gamepads.cpp  gdk.cpp  glfw_wrapper.cpp  glh.cpp  graphics_gl.cpp  hack.cpp  intvector2.cpp  keyboard.cpp  logger.cpp  mat4x4.cpp  mat4x4uniformcollection.cpp  mesh.cpp  model.cpp  mouse.cpp  opengl.cpp  quaternion.cpp  resources.cpp  shaderprogram.cpp  texture.cpp  textureuniformcollection.cpp  time.cpp  trigonometry.cpp  vector2.cpp  vector2uniformcollection.cpp  vector3.cpp  vector3uniformcollection.cpp  vector4.cpp  vector4uniformcollection.cpp  vertexattribute.cpp  vertexdata.cpp  vertexformat.cpp  webapis_wrapper.cpp
lib/src/gdk/: glh.h
lib/src/include/gdk/: auth_map.h  auth_vector.h  camera.h  default_ptr.h  defaultresources.h  dynamic_pool.h  exception.h  floatuniformcollection.h  gamepads.h  glfw_wrapper.h  glh.h  graphics_gl.h  hack.h  httprequest.h  intvector2.h  keyboard.h  lazy_ptr.h  logger.h  mat4x4.h  mat4x4uniformcollection.h  mesh.h  model.h  mouse.h  opengl.h  quaternion.h  resource_manager.h  resources.h  shaderprogram.h  static_pool.h  texture.h  textureuniformcollection.h  time.h  trigonometry.h  uniformcollection.h  vector2.h  vector2uniformcollection.h  vector3.h  vector3uniformcollection.h  vector4.h  vector4uniformcollection.h  (+4 more)
resource/: CMakeLists.txt  test.txt
src/: CMakeLists.txt  color.cpp  color.h  main.c  main.cpp
test/: CMakeLists.txt  example_test.cpp  super_cool_test.cpp
workspace/: build.sh  documentation-only.sh  emscripten-build.sh  hack-c.sh  hack-cpp.sh  linux-or-macos-build.sh  webassembly-crosscompile-build.sh  windows-crosscompile-build.sh  wip-build.sh  xcode-generate.sh
